# puppet-inspector

./: .gitignore  CODE_OF_CONDUCT.md  COPYING.md  Cargo.toml  LICENSE.BSD-2c.md  README.md  TODO.md  build.rs
ningyo-binding/: Cargo.toml
ningyo-binding/src/: binding.rs  vts.rs
ningyo-extensions/: Cargo.toml
ningyo-extensions/src/: gtk_ext.rs  json.rs  lib.rs  string_ext.rs
ningyo-extensions/src/wgpu/: mod.rs
ningyo-gtk-wgpu/: Cargo.toml
ningyo-gtk-wgpu/src/: boxed.rs  lib.rs  texshare.rs  widget.rs
ningyo-gtk-wgpu/src/texshare/: linux.rs  windows.rs
ningyo-gtk-wgpu/src/widget/: class.rs  subclass.rs
ningyo-look-and-feel/: Cargo.toml
ningyo-render-wgpu/: .gitignore  Cargo.toml  build.rs
ningyo-render-wgpu/src/: error.rs  lib.rs  pipeline.rs  renderer.rs  resources.rs  shader.rs  texture.rs  uploads.rs
ningyo-render-wgpu/src/shaders/: dbg.vert  dbgline.frag  dbgpoint.frag  lighting.frag  mask.frag  mask.vert  scene.frag  scene.vert
ningyo-render-wgpu/src/shaders/basic/: anim.vert  basic-mask.frag  basic.frag  basic.vert  composite-mask.frag  composite.frag
ningyo-texshare/: Cargo.toml
ningyo-texshare/src/: error.rs  lib.rs  linux.rs  texture.rs  vulkan.rs  wgpu.rs  windows.rs
ningyo-texshare/src/vulkan/: conv.rs  ext.rs  image.rs  mod.rs
ningyotsukai/: Cargo.toml  build.rs
ningyotsukai/src/: bindings.rs  io.rs  main.rs  resources.gresource.xml  stage.rs  tracker.rs  window.rs
ningyotsukai/src/bindings/: form.rs  form.ui  panel.rs  panel.ui  panel_frame.ui
ningyotsukai/src/document/: controller.rs  controller.ui  model.rs
ningyotsukai/src/io/: comm.rs  error.rs  main.rs  vts.rs
ningyotsukai/src/panels/: dock.rs  frame.css  frame.rs  frame.ui
ningyotsukai/src/stage/: border.rs  gestures.rs  gizmos.rs  model.rs  renderer.rs  stage.css  widget.rs
ningyotsukai/src/stage/gestures/: resize.rs  select.rs
ningyotsukai/src/stage/gizmos/: puppet.rs  selection.rs
ningyotsukai/src/stage/model/: puppet.rs  stage.rs
ningyotsukai/src/stage/renderer/: wgpu.rs
ningyotsukai/src/tracker/: manager.rs  model.rs  panel.rs  panel.ui  panel_frame.ui  params.rs  reference.rs
ningyotsukai/src/tracker/params/: panel.rs  panel.ui  panel_frame.ui
ningyotsukai/src/window/: controller.rs  controller.ui
puppet-inspector/: Cargo.toml
puppet-inspector/src/: main.rs  navigation.rs
puppet-inspector/src/detail_views/json/: inspector.rs
puppet-inspector/src/detail_views/metadata/: inspector.rs
puppet-inspector/src/detail_views/node/: inspector.rs  inspector.ui  search.rs
puppet-inspector/src/detail_views/param/: inspector.rs  search.rs
puppet-inspector/src/document/: controller.rs
puppet-inspector/src/navigation/: enums.rs  json_index.rs
puppet-inspector/src/window/: controller.rs
resources/: document.ui  inox_render_preview.ui  json_inspector.ui  look-and-feel.css  metadata_inspector.ui  node_inspector.ui  node_search.ui  param_inspector.ui  resources.gresource.xml  window.ui  windows-look-and-feel.css
src/: detail_views.rs  document.rs  ext.rs  io_adapter.rs  json.rs  lib.rs  look_and_feel.rs  main.rs  navigation_item.rs  pipeline.rs  puppet.rs  shader.rs  string_ext.rs  texture.rs  window.rs
src/detail_views/: inox_render_preview.rs  json.rs  metadata.rs  node.rs  param.rs  physics.rs  puppet.rs  texture.rs
src/detail_views/json/: inspector.rs  inspector.ui  pathing.rs  subkey.rs
src/detail_views/metadata/: inspector.rs
src/detail_views/node/: inspector.rs  search.rs  search.ui
src/detail_views/param/: inspector.rs  inspector.ui  search.rs  search.ui
src/detail_views/physics/: inspector.rs  inspector.ui
src/detail_views/texture/: browser.rs  browser.ui
src/document/: controller.rs  state.rs
src/ext/: json.rs
src/look_and_feel/: windows.rs
src/navigation/: enums.rs
src/navigation_item/: enums.rs  json_index.rs  json_path.rs  path.rs
src/render_preview/: window.rs
src/shaders/basic/: composite.vert
src/window/: controller.rs
