[package]
name = "puppet-inspector"
version = "0.1.0"
edition = "2024"

[dependencies]
glib = { version = "0.22.0" }
gio = { version = "0.22.1" }
inox2d = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "9a04b433400f4f427c2d53acf25010b48437d36e" }
json = "0.12.4"

[target.'cfg(not(windows))'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_10"] }
gdk4 = { version = "0.11.0", features = ["v4_10"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["UI_ViewManagement"] }
gtk4 = { version = "0.11.0", features = ["v4_20"] }
gdk4 = { version = "0.11.0", features = ["v4_20"] }

[build-dependencies]
glib-build-tools = "0.22.0"
