[package]
name = "ningyo-look-and-feel"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Arcturus Emrys <aemrys@arcturus.live>"]

[dependencies]
glib = { version = "0.22.0" }
gio = { version = "0.22.1" }

[target.'cfg(not(windows))'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_10"] }
gdk4 = { version = "0.11.0", features = ["v4_10"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["UI_ViewManagement"] }
gtk4 = { version = "0.11.0", features = ["v4_20"] }
gdk4 = { version = "0.11.0", features = ["v4_20"] }

[build-dependencies]
glib-build-tools = "0.22.0"
