[package]
name = "inox2d-wgpu"
description = "WGPU renderer for Inox2D"
authors = ["Arcturus Emrys"]
version = "0.3.0"
edition = "2024"
repository = "https://github.com/Inochi2D/inox2d"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber", "opengl"]
categories = ["graphics", "rendering"]

[dependencies]
inox2d = { path = "../inox2d", version = "0.3.0" }
glam = "0.29.0"
wgpu = { version = "28.0.0", features=["spirv"] }
thiserror = "1.0.39"

[build-dependencies]
shaderc = { version = "0.10", features=["build-from-source"] }
spirv-reflect = { git = "https://github.com/gwihlidal/spirv-reflect-rs.git", rev="97298067e3b1c9ce05633d78f1183c14a3cc6acc"}