[package]
name = "ningyo-render-wgpu"
description = "WGPU renderer for Inox2D"
authors = ["Arcturus Emrys <aemrys@arcturus.live>"]
version = "0.3.0"
edition = "2024"
license = "BSD-2-Clause"
keywords = ["gamedev", "graphics", "inochi2d", "vtuber", "opengl"]
categories = ["graphics", "rendering"]

[dependencies]
inox2d = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "8f97e9af23dab15c4aef92d376deded01b7479fb" }
glam = "0.29.0"
wgpu-hal = { version = "28.0.0" }
wgpu = { version = "28.0.0", features=["spirv"] }
thiserror = "1.0.39"

[build-dependencies]
shaderc = { version = "0.10", features=["build-from-source"] }
spirv-reflect = { git = "https://github.com/gwihlidal/spirv-reflect-rs.git", rev="97298067e3b1c9ce05633d78f1183c14a3cc6acc"}