[package]
name = "ningyotsukai"
version = "0.1.0"
edition = "2024"
description = "A virtual puppetry performance recording tool."
authors = ["Arcturus Emrys <aemrys@arcturus.live>"]

[dependencies]
json="0.12.4"
smol="2.0.2"
thiserror="2.0.18"
glib = { version = "0.22.0" }
gio = { version = "0.22.1" }

[target.'cfg(not(windows))'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_10"] }
gdk4 = { version = "0.11.0", features = ["v4_10"] }

[target.'cfg(windows)'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_20"] }
gdk4 = { version = "0.11.0", features = ["v4_20"] }

[build-dependencies]
glib-build-tools = "0.22.0"
