[package]
name = "ningyotsukai"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A virtual puppetry performance recording tool."
authors = ["Arcturus Emrys <aemrys@arcturus.live>"]

[dependencies]
json="0.12.4"
smol="2.0.2"
thiserror="2.0.18"
glib = { version = "0.22.0" }
gio = { version = "0.22.1" }
gsk4 = { version = "0.11.0", features = ["v4_10"] }
graphene = { package="graphene-rs", version = "0.22.0" }
generational-arena = "0.2.9"
glow = "0.14.1"
gl46 = "0.2.1"
inox2d = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "b92be8c7d12e3c790a4d6273a28399214720623b" }
inox2d-opengl = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "b92be8c7d12e3c790a4d6273a28399214720623b" }
ningyo-look-and-feel = { path = "../ningyo-look-and-feel" }
ningyo-extensions = { path = "../ningyo-extensions" }
renderdoc = { version = "0.12.1", optional = true }

[target.'cfg(not(windows))'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_10"] }
gdk4 = { version = "0.11.0", features = ["v4_10"] }

[target.'cfg(windows)'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_20"] }
gdk4 = { version = "0.11.0", features = ["v4_20"] }

[build-dependencies]
glib-build-tools = "0.22.0"
