[package]
name = "ningyotsukai"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "A virtual puppetry performance recording tool."
authors = ["Arcturus Emrys <aemrys@arcturus.live>"]

[dependencies]
json="0.12.4"
smol="2.0.2"
thiserror="2.0.18"
glib = { version = "0.22.0" }
gio = { version = "0.22.1" }
gsk4 = { version = "0.11.0", features = ["v4_10"] }
graphene = { package="graphene-rs", version = "0.22.0" }
generational-arena = "0.2.9"
glow = "0.14.1"
gl46 = "0.2.1"
glam = "0.29.0"
inox2d = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "8f97e9af23dab15c4aef92d376deded01b7479fb" }
inox2d-opengl = { git = "https://github.com/ArcturusEmrys/inox2d", rev = "8f97e9af23dab15c4aef92d376deded01b7479fb" }
ningyo-look-and-feel = { path = "../ningyo-look-and-feel" }
ningyo-extensions = { path = "../ningyo-extensions" }
ningyo-binding = { path = "../ningyo-binding" }
ningyo-texshare = { path = "../ningyo-texshare" }
renderdoc = { version = "0.12.1", optional = true }
mlua = { version = "0.11.6", features = ["send"] }
ningyo-gtk-wgpu = {path = "../ningyo-gtk-wgpu" }
ningyo-render-wgpu = {path = "../ningyo-render-wgpu" }
pollster = "0.4.0"
wgpu = { version = "29.0.0" }

[target.'cfg(target_os="linux")'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_10"] }
gdk4 = { version = "0.11.0", features = ["v4_10"] }

[target.'cfg(windows)'.dependencies]
gtk4 = { version = "0.11.0", features = ["v4_20"] }
gdk4 = { version = "0.11.0", features = ["v4_20"] }

[build-dependencies]
glib-build-tools = "0.22.0"
